{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "3988458c-a04c-4433-b6ee-bb439cc7461c",
            "actions": [
                {
                    "name": "LeftJoystick",
                    "type": "Value",
                    "id": "22fc026e-8f7b-40ce-8a18-fd46b1e60dc4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightJoystick",
                    "type": "Value",
                    "id": "6d24483d-1266-406c-be90-015bf1a77c9d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "A",
                    "type": "Value",
                    "id": "a0c7a0d6-8f85-4eda-901c-53713d16cd10",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "B",
                    "type": "Value",
                    "id": "1b3d4676-74f3-4e13-8a4f-c17a494b9511",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "X",
                    "type": "Value",
                    "id": "abb6cdde-bd9e-4294-9e6a-3f182c0380d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Y",
                    "type": "Value",
                    "id": "a6b1bece-d72e-4764-b37f-cf28ab2e9c13",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "LB",
                    "type": "Value",
                    "id": "176346bd-4e4d-46de-89df-b3dcd3af9944",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "RB",
                    "type": "Value",
                    "id": "c62df6d9-3b5c-449d-bb1e-0b4f9f6204d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "LT",
                    "type": "Value",
                    "id": "2aa5f684-11c9-4dc1-a0c3-8da5f2fff3c5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RT",
                    "type": "Value",
                    "id": "11d66751-6b07-401d-baac-3bd97e757d10",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DPad",
                    "type": "Value",
                    "id": "4d749434-b905-449a-8739-7918549cb9e4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "Start",
                    "type": "Value",
                    "id": "8acc98ec-5a83-4e5f-8b73-4b084763793d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Select",
                    "type": "Value",
                    "id": "f7519607-129e-4666-8160-c3c99a338285",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "LeftJoystickPress",
                    "type": "Value",
                    "id": "c6623e1b-75f5-4891-90ce-570fa4cacab7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "RightJoystickPress",
                    "type": "Value",
                    "id": "9a04ed8f-9085-4801-a33a-086dba8a0620",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "KeyA",
                    "type": "Value",
                    "id": "b5a8dd48-7eb7-4504-aed2-b05d924f730c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "KeyD",
                    "type": "Value",
                    "id": "e3be107f-6f15-4565-84e5-b1260f1890a1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "KeySpace",
                    "type": "Value",
                    "id": "6a4e3ecb-5e54-4bc4-955b-d3f96cfcd50b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5a6b285f-f55c-42c3-877c-2f9d896c4c46",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "LeftJoystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80874f28-f600-4468-8e26-fbe2d9c0eae5",
                    "path": "<XInputController>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "RightJoystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53aeda7c-0f15-4adf-bf32-00e887fc2488",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a247d688-bb01-4494-8246-a9ce2d296d4b",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "B",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7180fff-37f9-4ef3-a47e-b4363aa9834a",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45f5e58b-3036-44f5-9333-e6eb9bbeab68",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4161e37-9302-4a1c-8d8c-c0a7c8b46324",
                    "path": "<XInputController>/leftShoulder",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "LB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b355ba1f-09f8-477c-b9e3-9a3bb050e4fd",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "RB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2e88df9-587d-4c17-8e6c-579e58fd3d3f",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2197e880-d2ab-46e1-bfb4-a02c668d72db",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85652ecb-7521-4546-8598-a305a2b163e3",
                    "path": "<XInputController>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DPad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd498bca-13d4-463a-b102-b4e7e3055029",
                    "path": "<XInputController>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a3db7f3-5f3d-4297-8b44-8eeab86fa479",
                    "path": "<XInputController>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17501e3d-0337-4893-8d5d-d5e5931e8bfc",
                    "path": "<XInputController>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftJoystickPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e202d3ef-c076-4801-8086-550340143f92",
                    "path": "<XInputController>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightJoystickPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f5f0bc3c-4d05-4210-ae84-f2d32302e318",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cfa2142f-619f-495e-ac13-c811a6cbf6a1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyD",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53b8a0f9-b4ac-4a35-a998-cc0c898fb24f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeySpace",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "0fa2b654-c809-41da-ae30-4684e7a10ba6",
            "actions": [
                {
                    "name": "RightStick",
                    "type": "Value",
                    "id": "bfa4b9ba-3ebc-4102-8f7a-0fad0d911349",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftStick",
                    "type": "Value",
                    "id": "714f1d50-d675-4615-8548-395b4d04c5cf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "A",
                    "type": "Button",
                    "id": "dd383a4f-7440-4567-a0a2-4e85e5a70330",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "B",
                    "type": "Button",
                    "id": "ad932b84-3826-4b60-b39b-f4f15ac44e32",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8ce32c91-72f6-48a2-b2de-7787710358a8",
                    "path": "<XInputController>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bb94544-70cd-4d58-9aea-de8ea9d5e5fc",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone(max=1)",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ebed276-a40b-4fb3-889e-b42b6d5679cc",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2019d9de-889c-4562-8b44-3826f9819eeb",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "B",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "3cfcf350-65fa-4b80-86f9-963e9897d63d",
            "actions": [
                {
                    "name": "Enter",
                    "type": "Button",
                    "id": "57cb5532-4c74-430d-9839-dc822e8390bf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "614da461-49e6-4b5c-a5f3-ea58ee18cee2",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Enter",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}